--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,10 +13,15 @@
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="stylesheet" href="/assets/css/animations.css">
 </head>
+
 <body>
-    
-    <header class="navigation">
-        <h1 data-value="MY&lt;PORTFOLIO/&gt;" id="navigation-title">MY&lt;PORTFOLIO/&gt;</h1>
+
+    <div class="code-background-container">
+
+    </div>
+
+    <header>
+        <h1 data-value="Welcome to MY&lt;PORTFOLIO/&gt;" id="navigation-title">Welcome to MY&lt;PORTFOLIO/&gt;</h1>
         <div class="navigation-container">
             <div class="navigation-container-item"><a href="#">HOME</a></div>
             <div class="navigation-container-item"><a href="#">ABOUT</a></div>
@@ -25,8 +31,26 @@
     </header>
 
     <main>
-        <div class="home-hero">
+        <!-- <div class="start-hero">
+            <h1 data-value="MY&lt;PORTFOLIO/&gt;" id="navigation-title">MY&lt;PORTFOLIO/&gt;</h1>
+            <div class="navigation-container">
+                <div class="navigation-container-item"><a href="#">HOME</a></div>
+                <div class="navigation-container-item"><a href="#">ABOUT</a></div>
+                <div class="navigation-container-item"><a href="#">PROJECTS</a></div>
+                <div class="navigation-container-item"><a href="#">CONTACT</a></div>
+            </div>
+        </div> -->
 
+        <div class="home-hero">
+            <div class="home-hero-content">
+                <img src="/assets/images/dedsec.jpg" alt="DEDSEC-1-1 Image" width="200px" height="200px">
+                <div class="home-hero-description">
+                    <h3>Hello, I'm dedsec!</h3>
+                    <p>
+                        a litte about me
+                    </p>
+                </div>
+            </div>
         </div>
 
         <div class="about-hero">
@@ -48,4 +72,5 @@
 
     <script src="assets/js/generationEffect.js"></script>
 </body>
+
 </html>
