--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 </head>
 
 <body>
-
-    <div class="code-background-container">
-
-    </div>
-
     <header>
-        <h1 data-value="Welcome to MY&lt;PORTFOLIO/&gt;" id="navigation-title">Welcome to MY&lt;PORTFOLIO/&gt;</h1>
+        <div id="header-section">
+            <div data-value="MY&lt;PORTFOLIO/&gt;" id="header-title">MY&lt;PORTFOLIO/&gt;</div>
+            <div id="settings">
+                
+            </div>
+            <!-- Falling digits -->
+        </div>
         <div class="navigation-container">
             <div class="navigation-container-item"><a href="#">HOME</a></div>
             <div class="navigation-container-item"><a href="#">ABOUT</a></div>
@@ -31,19 +32,9 @@
     </header>
 
     <main>
-        <!-- <div class="start-hero">
-            <h1 data-value="MY&lt;PORTFOLIO/&gt;" id="navigation-title">MY&lt;PORTFOLIO/&gt;</h1>
-            <div class="navigation-container">
-                <div class="navigation-container-item"><a href="#">HOME</a></div>
-                <div class="navigation-container-item"><a href="#">ABOUT</a></div>
-                <div class="navigation-container-item"><a href="#">PROJECTS</a></div>
-                <div class="navigation-container-item"><a href="#">CONTACT</a></div>
-            </div>
-        </div> -->
-
         <div class="home-hero">
             <div class="home-hero-content">
-                <img src="/assets/images/dedsec.jpg" alt="DEDSEC-1-1 Image" width="200px" height="200px">
+                <img src="/assets/images/dedsec-face.png" alt="DEDSEC-1-1 Image" width="200px" height="200px">
                 <div class="home-hero-description">
                     <h3>Hello, I'm dedsec!</h3>
                     <p>
@@ -71,6 +62,7 @@
     </footer>
 
     <script src="assets/js/generationEffect.js"></script>
+    <script src="assets/js/fallingEffect.js"></script>
 </body>
 
 </html>
