--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 
-    <!-- Google Press Start 2P font -->
+    <!-- Googles - Press Start 2P font -->
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!---->
 
+    <!-- Googles - Icons font -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--  -->
+
     <link rel="stylesheet" href="/assets/css/index.css">
     <link rel="stylesheet" href="/assets/css/animations.css">
+
 </head>
 
 <body>
@@ -19,26 +24,28 @@
         <div id="header-section">
             <div data-value="MY&lt;PORTFOLIO/&gt;" id="header-title">MY&lt;PORTFOLIO/&gt;</div>
             <div id="settings">
-                
+                <!-- Settings for the falling animation. In the future. -->
             </div>
             <!-- Falling digits -->
-        </div>
-        <div class="navigation-container">
-            <div class="navigation-container-item"><a href="#">HOME</a></div>
-            <div class="navigation-container-item"><a href="#">ABOUT</a></div>
-            <div class="navigation-container-item"><a href="#">PROJECTS</a></div>
-            <div class="navigation-container-item"><a href="#">CONTACT</a></div>
+            <!-- (↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓) -->
         </div>
     </header>
+
+    <nav id="navigation" class="navigation-hidden">
+        <div class="navigation-item"><a href="#"><i class="material-icons">home</i></a></div>
+        <div class="navigation-item"><a href="#"><i class="material-icons">mood</i></a></div>
+        <div class="navigation-item"><a href="#"><i class="material-icons">work</i></a></div>
+        <div class="navigation-item"><a href="#"><i class="material-icons">contact_mail</i></a></div>
+    </nav>
 
     <main>
         <div class="home-hero">
             <div class="home-hero-content">
-                <img src="/assets/images/dedsec-face.png" alt="DEDSEC-1-1 Image" width="200px" height="200px">
+                <img src="/assets/images/dedsec.jpg" alt="DEDSEC-1-1 Image" width="200px" height="200px">
                 <div class="home-hero-description">
-                    <h3>Hello, I'm dedsec!</h3>
+                    <h1>Hello, I'm dedsec!</h1>
                     <p>
-                        a litte about me
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
                     </p>
                 </div>
             </div>
@@ -58,11 +65,12 @@
     </main>
 
     <footer>
-        <h3><a href="https://github.com/dedsec-1-1">&copy;DEDSEC-1-1</a></h3>
+        <h3><a href="https://github.com/dedsec-1-1">&copy;DEDSEC-1-1. </a>All rights reserved.</h3>
     </footer>
 
     <script src="assets/js/generationEffect.js"></script>
     <script src="assets/js/fallingEffect.js"></script>
+    <script src="assets/js/navigationApearEffect.js"></script>
 </body>
 
 </html>
